--- a/tex/main.tex
+++ b/tex/main.tex
@@ -23,15 +23,9 @@
 \begin{document}  
  
 \maketitle
-
  
-\begin{center}
-    \textbf{Abstract}
-\end{center}
-
   {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. % Such antigenic drifts necessitate periodic innoculation of the population with a  reformulated  vaccine,  targeting the  dominant  strain of the upcoming flu season.
-Failing to predict the dominant strain in an upcoming season  dramatically reduces  the  effectiveness of the flu shot~\cite{tricco2013comparing}, yet such prediction remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  pose the even graver threat of a global  pandemic, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is limited. In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints using only genomic sequence data. Analyzing sequences for   Hemaglutinnin (HA) and Neuraminidase (NA)  of nearly 100,000 unique \infl  strains from public  databases, our inferred models (\enet{s})  estimate the likelihood of specific future  mutations, ultimately  yielding the  numerical likelihood of specific  strains emerging via natural evolutionary processes. We show that our forecasts  outperform World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate the  Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for evaluating  the pandemic potential of  \infl  viruses isolated from animal hosts, particularly ones  that do not yet circulate in humans. Our  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, thus  enabling  meaningful preemptive pandemic mitigation strategies. 
+{\normalfont \itshape Abstract:} Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. Failing to predict the dominant strain in an upcoming season  dramatically reduces  the  effectiveness of the flu shot~\cite{tricco2013comparing}, yet such prediction remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  pose the even graver threat of a global  pandemic, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is limited. In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints using only genomic sequence data. Analyzing sequences for   Hemaglutinnin (HA) and Neuraminidase (NA)  of nearly 100,000 unique \infl  strains from public  databases, our inferred models (\enet{s})  estimate the likelihood of specific future  mutations, ultimately  yielding the  numerical likelihood of specific  strains emerging via natural evolutionary processes. We show that our forecasts  outperform World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate the  Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for evaluating  the pandemic potential of  \infl  viruses isolated from animal hosts, particularly ones  that do not yet circulate in humans. Our  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, thus  enabling  meaningful preemptive pandemic mitigation strategies. 
 }
 
 \vspace{10pt}
@@ -39,6 +33,7 @@ Failing to predict the dominant strain in an upcoming season  dramatically reduc
 
 Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response comprises  yearly innoculation of the  population with a  reformulated  vaccine.  Designing the optimal flu shot requires predicting the dominant  strain(s)  in the upcoming season, and deviations between the predicted and the circulating strain(s)  reduce  vaccine effectiveness~\cite{tricco2013comparing} dramatically. Unfortunately,  despite  recent advances in forecasting tools~\cite{neher2014predicting,huddleston2020integrating}, prediction of the dominant strain(s) remains imperfect. 
 
+%###################################                                            
 %###################################                                            
 \ifFIGS
 \begin{figure*}[t]
@@ -55,21 +50,15 @@ Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small se
   \vspace{-20pt}
   
  \captionN{\textbf{\enet inference and applications}. \textbf{a}, Variations of
-   genomes for identical subgroups of \infl are analyzed to
-   infer a recursive forest of decision trees (conditional inference trees~\cite{Hothorn06unbiasedrecursive}), the \enet,
-   which maximally captures the emergent  dependencies between an a priori unspecified number of
-   mutations, deletions and insertions. With these inferred dependencies we can
-   estimate the numerical odds of specific mutations, and by extension, the numerical value of
+   genomes for identical subgroups of \infl are analyzed to infer a recursive forest of decision trees (conditional inference trees~\cite{Hothorn06unbiasedrecursive}), the \enet,   which maximally captures the emergent  dependencies between an a priori unspecified number of   mutations, deletions and insertions. With these inferred dependencies we can    estimate the numerical odds of specific mutations, and by extension, the numerical value of
    the probability of one strain giving rise to another in the wild, under  complex selection pressures from the background. b, Snapshot of decision trees  from the
    \enet constructed for H1N1 haemagglutinnin 2018 sequences. Note that the decision tree predicting the bases at index 1274   uses the bases at 1064, 1445, 197 as features. These features are automatically selected, as being maximally predictive  of the bases be at 1274. Then, we compute predictors for each of these  feature indices, $e.g.$   trees for  index 1064, which involves index 1314 and 339 as features. Continuing, we find that the trees for index 1314 involves indices 1263, 636 and 21, and that for 1263 involves 1314, 667 and 313. The predictor for 1263  depends on 1314, and that for 1314 depends on 1263, revealing the recursive structure of \enet. c, First application: With \enet induced ability to quantify mutation probabilities,  we forecast  dominant strain(s) for the next flu season, using only  sequences collected in the previous season (and the inferred \enet, using data from the past year). d, Second application: estimation of the risk of a global pandemic posed by individual animal strains that are still not known to circulate in humans.}\label{figscheme}.
 \end{figure*}
 \else
 \refstepcounter{figure}\label{figschemea}
 \fi  
-
 %#############################################                                  
 %#############################################                                  
-
 
 While the seasonal flu epidemic is a serious health concern, novel \infl strains spilling over into humans from animal reservoirs pose the even graver threat of a global pandemic. With the memory of sudden emergence of   COVID-19 fresh in our minds, a looimng question  is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens,  thus harboring  a high potential  of triggering the next  pandemic.
 
@@ -77,15 +66,13 @@ A possible approach to mitigating such risk is to identify specific strains in a
 
 CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
 
-\DQS{compress this desc to state the key results. Here we are stating what we are doing}
+In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) of the  genomic sequences  of key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza} (HA and NA respectively). Uncovering and representing these constraints within a predictive framework, which we refer to as the \enet, allows us to estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild in nera future relative to when the parent strain is observed. Explicit quantification of these likelihoods then yields a numerical estimate of the probability of a specific strain of interest giving rise to another. Such estimates cannot be obtained without first inferring the emergent constraints at play specific to a strain,  or without considering the variation of mutational probabilities from one positional index to another along a genomic sequence. Thus, classical  static DNA or genomic substitution models~\cite{posada1998modeltest} are not applicable in this context.  
 
-In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) in the genomic sequences  of key proteins   implicated  in cellular entry and exit~\cite{gamblin2010influenza} (HA and NA respectively). 
-Uncovering and representing these constraints within a predictive framework, which we call the \enet, allows us to
-estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild within a given time-period. Explicit quantification of these likelihoods then leads to the  estimation of the probability of a specific strain of interest giving rise to another, where the odds of such ``jumps'' are shaped by the inferred emergent constraints.
+Importantly,  a viral strain needs to have a  sufficiently high replicative fitness for it to be present in sufficiently high numbers in circulation to be  observed in the wild. Thus all sequences deposited in the public  databases, over which our model trains, may be assumed to have high fitness. It follows that the  dependencies between local variations that \enet uncovers arises from a  functional necessity of maintaining high replicative fitness. However,  fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
 
-It is necessary that a viral strain  has a  sufficiently high replicative fitness for it to be present in sufficiently high numbers in circulation to be  observed in the wild. Thus all sequences deposited in the public  databases, over which our model trains, may be assumed to have high fitness. It follows that the  dependencies between local variations that \enet uncovers arises from a  functional necessity of maintaining high replicative fitness. However,  fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
-
-The ability of the \enet framework to determine the numerical odds of specific sequence variations allows us to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions, with demonstrated approximate solutions (Fig.~\ref{figscheme}). [what are the questions] 1. a dominant strain(s) may be estimated by looking for one  that maximizes the  probability that all currently circulating strains simultaneously and spontaneously give rise to this target strain. 2. the pandemic risk score of a novel strain is high if it has a high likelihood of spilling over to humans and achieve HH transmission capability.
+The ability of the \enet framework to determine the numerical odds of specific sequence variations allows us to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions, with demonstrated approximate solutions (Fig.~\ref{figscheme}). Thus,  a dominant strain for an upcoming flu season
+may be identified as one which maximizes the joint probability of simultaneosly arising from each of the currently circulating strains (Fig.~\ref{figscheme}c).
+And, a pandemic risk score of a novel strain may be estimated as scaling with the probability of giving rise to a well-adapted human strain. We demonstrate that our proposed solutions for these problems can be validated in out-of-sample data.
 
 Structurally, the \enet comprises a recursive forest of  cross-dependent predictors: each component predictor aims to model the nucleotide ``outcome'' at a specific positional index, using the sequence entries at other possibly remote parts of the coding sequence as features (Fig.~\ref{figscheme}b); thus yielding a recursive collection of decision trees. These decision trees are %inferred 
 % At the core of our algorithmic framework is a recursive forest of  cross-predicting conditional inference trees, which we refer to as the \enet,  
