--- a/tex/main.tex
+++ b/tex/main.tex
@@ -25,7 +25,7 @@
 \maketitle
  
   {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-{\normalfont \itshape Abstract:} Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. Failing to predict the dominant strain in an upcoming season  dramatically reduces  the  effectiveness of the flu shot~\cite{tricco2013comparing}, yet such prediction remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  pose the even graver threat of a global  pandemic, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is limited. In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints using only genomic sequence data. Analyzing sequences for   Hemaglutinnin (HA) and Neuraminidase (NA)  of nearly 100,000 unique \infl  strains from public  databases, our inferred models (\enet{s})  estimate the likelihood of specific future  mutations, ultimately  yielding the  numerical likelihood of specific  strains emerging via natural evolutionary processes. We show that our forecasts  outperform World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate the  Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for evaluating  the pandemic potential of  \infl  viruses isolated from animal hosts, particularly ones  that do not yet circulate in humans. Our  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, thus  enabling  meaningful preemptive pandemic mitigation strategies. 
+{\normalfont \itshape Abstract:} Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. Failing to predict the dominant strain in an upcoming season  dramatically reduces  the  effectiveness of the flu shot~\cite{tricco2013comparing}, yet such prediction remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  pose the even graver threat of a global  pandemic, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is severely limited. In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints using only genomic sequence data. Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA)  sequences from nearly 100,000 unique \infl  strains from public  databases, our inferred models (\enet{s})  estimate the likelihood of specific future  mutations, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. Applied  to the problem of forecasting the dominat strain(s) of the upcoming flu season, we show that \enet-based forecasts  outperform World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the Northern and the Southern hemispheres. Furthermore we replicate the state of the art  assessment of the pandemic potential  of novel animal  strains. While the gold standard Influenza Risk Assessment Tool (IRAT) from the Center for Disease Control (CDC) comprises several time-consuming experimental assays, our proposed \erisk score can be evaluated in seconds for each new strain. This  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, thus  enabling  meaningful preemptive pandemic mitigation strategies. 
 }
 
 \vspace{10pt}
@@ -66,13 +66,14 @@ A possible approach to mitigating such risk is to identify specific strains in a
 
 CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
 
-In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) of the  genomic sequences  of key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza} (HA and NA respectively). Uncovering and representing these constraints within a predictive framework, which we refer to as the \enet, allows us to estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild in nera future relative to when the parent strain is observed. Explicit quantification of these likelihoods then yields a numerical estimate of the probability of a specific strain of interest giving rise to another. Such estimates cannot be obtained without first inferring the emergent constraints at play specific to a strain,  or without considering the variation of mutational probabilities from one positional index to another along a genomic sequence. Thus, classical  static DNA or genomic substitution models~\cite{posada1998modeltest} are not applicable in this context.  
+In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) of the  genomic sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza}, HA and NA respectively. Uncovering and representing these constraints within a predictive framework, which we refer to as the \enet, allows us to estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild. Explicit quantification of these likelihoods then yields a numerical estimate of the probability of a specific strain of interest giving rise to another. Such estimates are difficult to obtain without first inferring the emergent constraints at play specific to a strain,  or without considering the variation of mutational probabilities from one positional index to another along a genomic sequence. Thus, the well-known classical  DNA or genomic substitution models~\cite{posada1998modeltest} are not applicable in this context.  
 
-Importantly,  a viral strain needs to have a  sufficiently high replicative fitness for it to be present in sufficiently high numbers in circulation to be  observed in the wild. Thus all sequences deposited in the public  databases, over which our model trains, may be assumed to have high fitness. It follows that the  dependencies between local variations that \enet uncovers arises from a  functional necessity of maintaining high replicative fitness. However,  fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
+The sequence data from public databases that we train the \enet with represents sequences that were
+collected in the wild, and hence necessarily have  sufficiently high replicative fitness,  for these strains need  to be present in sufficiently high numbers in circulation to be  observed.  It follows that the  dependencies between local variations that \enet uncovers arises from a  functional necessity of maintaining high  fitness. However, these fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity, changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
 
-The ability of the \enet framework to determine the numerical odds of specific sequence variations allows us to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions, with demonstrated approximate solutions (Fig.~\ref{figscheme}). Thus,  a dominant strain for an upcoming flu season
-may be identified as one which maximizes the joint probability of simultaneosly arising from each of the currently circulating strains (Fig.~\ref{figscheme}c).
-And, a pandemic risk score of a novel strain may be estimated as scaling with the probability of giving rise to a well-adapted human strain. We demonstrate that our proposed solutions for these problems can be validated in out-of-sample data.
+The ability of the \enet framework to determine the numerical odds of specific sequence variations allows us to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions albeit with some simplifying assumptions, with demonstrated approximate solutions (Fig.~\ref{figscheme}). Thus,  a dominant strain for an upcoming flu season
+may be identified as one which maximizes the joint probability of simultaneosly arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).
+And, a pandemic risk score of a novel strain may be estimated as scaling with the probability of giving rise to a well-adapted human strain. We demonstrate that our proposed solutions for these problems can indeed be validated in out-of-sample data.
 
 Structurally, the \enet comprises a recursive forest of  cross-dependent predictors: each component predictor aims to model the nucleotide ``outcome'' at a specific positional index, using the sequence entries at other possibly remote parts of the coding sequence as features (Fig.~\ref{figscheme}b); thus yielding a recursive collection of decision trees. These decision trees are %inferred 
 % At the core of our algorithmic framework is a recursive forest of  cross-predicting conditional inference trees, which we refer to as the \enet,  
